--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 reqwest = { version = "0.12", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 thiserror = "*"
+macro-util = { path = "../macro-util" }
