--- a/translator/Cargo.toml
+++ b/translator/Cargo.toml
@@ -1,13 +1,11 @@
 [package]
-name = "message-sender"
+name = "translator"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../core" }
-tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0.12", features = ["json"] }
 clap = { version = "4.1", features = ["derive"] }
+core = { path = "../core" }
 anyhow = "1.0.86"
