add init lambdaman

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 
 members = [ 
     "core", 
+    "lambdaman-solver", 
     "macro-util",
-    "message-sender"
-, "translator"]
+    "message-sender",
+    "translator"
+]
