--- a/lambdaman-solver/Cargo.toml
+++ b/lambdaman-solver/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+proconio = "0.4.5"
+anyhow = "1.0.86"
+core = { path = "../core" }
