change to bigint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "lambdaman-solver", 
     "macro-util",
     "message-sender", 
+    "solution-encoder", 
     "spaceship-solver",
     "translator"
 ]
